Sock-shop/Security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  namespace: sock-shop
  annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
   kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: www.holumyde.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
    # - host: prometheus.tonynoah.me
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: prom-kube-prometheus-stack-prometheus
    #             port:
    #               number: 9090
    # - host: grafana.tonynoah.me
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: prom-grafana
    #             port:
    #               number: 80
  tls:
    - hosts:
        - www.holumyde.store
      secretName: olu-secret
